# gl-cli

./: .gl_history  Cargo.toml  README.md  build.sh  gitclone.sh  rustfmt.toml  script.gl  script.py  tmp
src/: cli.rs  flags.rs  main.rs  starts.rs
src/tools/: compile.rs  eval.rs  fmt.rs  mod.rs  repl.rs  run.rs
