# Copyright 2021 the GLanguage authors. All rights reserved. MIT license.

[package]
name = "gl"
version = "0.1.0-alpha"
authors = ["JoseCarlosSkar <josecarlosskar@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Uma interface de linha de comando para utilização da linguagem de script GLanguage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl_core = { path = "../gl-core", version = "0.1.0-alpha" }
gl_runtime = { path = "../gl-runtime", version = "0.1.0-alpha" }
