# Copyright 2021 the GLanguage authors. All rights reserved. MIT license.

[package]
name = "gl"
version = "0.1.0-alpha"
authors = ["JoseCarlosSkar <josecarlosskar@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CLI GLanguage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl_core = { path = "../gl-core", version = "0.1.0-alpha" }
gl_runtime = { path = "../gl-runtime", version = "0.1.0-alpha" }
gl_std = { path = "../gl-std", version = "0.1.0-alpha" }

clap = "3.0.0-beta.2"
rustyline = "8.0.0"
rustyline-derive = "0.4.0"
