# Copyright 2021 the GLanguage authors. All rights reserved. MIT license.

[package]
name = "gl_cli"
version = "0.1.0-alpha"
authors = ["JoseCarlosSkar <josecarlosskar@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CLI GLanguage"

[[bin]]
name = "gl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl_core = { path = "../gl-core", version = "0.1.0-alpha" }
gl_fmt = { path = "../gl-fmt", version = "0.1.0-alpha" }
gl_std = { path = "../gl-std", version = "0.1.0-alpha" }

clap = "3.0.0-beta.5"
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
termcolor = "1.1.2"
